Bump Dependencies
Due to long pause Dependencies will not be listed in detail.
But to pinpoint:

AGP 8.1.2
Gradle 8.4
Java 17
Kotlin 1.9.10